[gd_scene load_steps=2 format=3 uid="uid://card_face"]

[ext_resource type="Script" path="res://scripts/ui/card_face.gd" id="1"]

[node name="CardFace" type="Control"]
custom_minimum_size = Vector2(190, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CardPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="MarginContainer" parent="CardPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="VBox" type="VBoxContainer" parent="CardPanel/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="TopRow" type="HBoxContainer" parent="CardPanel/Content/VBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CardPanel/Content/VBox/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="OwnedLabel" type="Label" parent="CardPanel/Content/VBox/TopRow"]
layout_mode = 2
text = "x0"

[node name="AttrRow" type="HBoxContainer" parent="CardPanel/Content/VBox"]
layout_mode = 2

[node name="CardImage" type="TextureRect" parent="CardPanel/Content/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 110)
stretch_mode = 5
expand_mode = 1

[node name="Description" type="RichTextLabel" parent="CardPanel/Content/VBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = false
scroll_active = false
mouse_filter = 2
autowrap_mode = 4

[node name="RangeLabel" type="Label" parent="CardPanel/Content/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = ""
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 10

[node name="BottomRow" type="HBoxContainer" parent="CardPanel/Content/VBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RarityLabel" type="Label" parent="CardPanel/Content/VBox/BottomRow"]
layout_mode = 2
text = "普通"

[node name="CostLabel" type="Label" parent="CardPanel/Content/VBox/BottomRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "能量: 0"
horizontal_alignment = 2

[node name="SelectionHighlight" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.8, 0.2, 0.2)
visible = false
mouse_filter = 2

